--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,20 +20,36 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
       
+    - name: Cache Android SDK
+      uses: actions/cache@v3
+      with:
+        path: $HOME/Android/Sdk
+        key: android-sdk-${{ hashFiles('**/gradle.build', '**/settings.gradle') }}
+        restore-keys: |
+          android-sdk-
+
     - name: Install Android SDK
+      if: steps.cache-android-sdk.outputs.cache-hit != 'true'
       run: |
         sudo apt-get update
         sudo apt-get install -y wget unzip
         mkdir -p $HOME/Android/Sdk
         wget https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip -O cmdline-tools.zip
         unzip cmdline-tools.zip -d $HOME/Android/Sdk/cmdline-tools
-        # Move the extracted tools to the right path
         mv $HOME/Android/Sdk/cmdline-tools/cmdline-tools $HOME/Android/Sdk/cmdline-tools/latest
         yes | $HOME/Android/Sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/Android/Sdk --licenses
         $HOME/Android/Sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/Android/Sdk "platforms;android-30" "build-tools;30.0.3"
 
     - name: Create local.properties
       run: echo "sdk.dir=$HOME/Android/Sdk" > local.properties
+
+    - name: Cache Gradle
+      uses: actions/cache@v3
+      with:
+        path: ~/.gradle/caches
+        key: gradle-${{ hashFiles('**/gradle.build', '**/settings.gradle') }}
+        restore-keys: |
+          gradle-
 
     - name: Compile and run tests on robot code
       run: ./gradlew build
