--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
       
+    - name: Ensure Android SDK directory exists
+      run: mkdir -p $HOME/Android/Sdk
+
     - name: Cache Android SDK
       uses: actions/cache@v3
       with:
@@ -33,7 +36,6 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y wget unzip
-        mkdir -p $HOME/Android/Sdk
         wget https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip -O cmdline-tools.zip
         unzip cmdline-tools.zip -d $HOME/Android/Sdk/cmdline-tools
         mv $HOME/Android/Sdk/cmdline-tools/cmdline-tools $HOME/Android/Sdk/cmdline-tools/latest
@@ -42,6 +44,9 @@ jobs:
       
     - name: Create local.properties
       run: echo "sdk.dir=$HOME/Android/Sdk" > local.properties
+
+    - name: Ensure Gradle cache directory exists
+      run: mkdir -p ~/.gradle/caches
 
     - name: Cache Gradle
       uses: actions/cache@v3
