--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,12 @@ jobs:
       uses: actions/cache@v3
       with:
         path: $HOME/Android/Sdk
-        key: android-sdk-${{ hashFiles('**/gradle.build', '**/settings.gradle') }}
+        key: android-sdk-${{ hashFiles('**/build.gradle', '**/settings.gradle') }}
         restore-keys: |
           android-sdk-
+
+    - name: List Android SDK directory
+      run: ls -la $HOME/Android/Sdk
 
     - name: Install Android SDK
       if: steps.cache-android-sdk.outputs.cache-hit != 'true'
@@ -41,7 +44,7 @@ jobs:
         mv $HOME/Android/Sdk/cmdline-tools/cmdline-tools $HOME/Android/Sdk/cmdline-tools/latest
         yes | $HOME/Android/Sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/Android/Sdk --licenses
         $HOME/Android/Sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/Android/Sdk "platforms;android-30" "build-tools;30.0.3"
-      
+
     - name: Create local.properties
       run: echo "sdk.dir=$HOME/Android/Sdk" > local.properties
 
@@ -52,9 +55,12 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.gradle/caches
-        key: gradle-${{ hashFiles('**/gradle.build', '**/settings.gradle') }}
+        key: gradle-${{ hashFiles('**/build.gradle', '**/settings.gradle') }}
         restore-keys: |
           gradle-
+
+    - name: List Gradle cache directory
+      run: ls -la ~/.gradle/caches
 
     - name: Compile and run tests on robot code
       run: ./gradlew build
