--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,13 @@ jobs:
         restore-keys: |
           sdk-${{ runner.os }}-android-
 
-    - name: Check if cache was hit
-      run: echo "Cache hit: ${{ steps.cache-android-sdk.outputs.cache-hit }}"
+    - name: Log cache status
+      run: |
+        if [[ "${{ steps.cache-android-sdk.outputs.cache-hit }}" == 'true' ]]; then
+          echo "Cache was hit."
+        else
+          echo "Cache was not hit, installing SDK."
+        fi
 
     - name: Install Android SDK
       if: steps.cache-android-sdk.outputs.cache-hit != 'true'
