--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,10 @@ android.useAndroidX=true
 # We no longer need to auto-convert third-party libraries to use AndroidX, which slowed down the build
 android.enableJetifier=false
 
-# Allow Gradle to use up to 1 GB of RAM
-org.gradle.jvmargs=-Xmx1024M
+# Allow Gradle to use up to 4 GB of RAM
+org.gradle.jvmargs=-Xmx4g
+
+# Performance upgrade
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.parallel=true
