--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,17 +27,42 @@ jobs:
     - name: Ensure Android SDK directory exists
       run: mkdir -p $HOME/Android/Sdk
 
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
+    - name: Check Android SDK directory before caching
+      run: ls -la $HOME/Android/Sdk
 
-    - name: Accept Android SDK Licenses
-      run: yes | $HOME/Android/Sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-      
+    - name: Cache Android SDK
+      id: cache-android-sdk
+      uses: actions/cache@v3
+      with:
+        path: |
+          $HOME/Android/Sdk/cmdline-tools
+          $HOME/Android/Sdk/platforms
+          $HOME/Android/Sdk/build-tools
+        key: sdk-${{ runner.os }}-android-${{ hashFiles('**/build.gradle', '**/settings.gradle') }}
+        restore-keys: |
+          sdk-${{ runner.os }}-android-
+
+    - name: Log cache status
+      run: |
+        if [[ "${{ steps.cache-android-sdk.outputs.cache-hit }}" == 'true' ]]; then
+          echo "Cache was hit."
+        else
+          echo "Cache was not hit, installing SDK."
+        fi
+
+    - name: Install Android SDK
+      if: steps.cache-android-sdk.outputs.cache-hit != 'true'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget unzip
+        wget https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip -d $HOME/Android/Sdk/cmdline-tools
+        mv $HOME/Android/Sdk/cmdline-tools/cmdline-tools $HOME/Android/Sdk/cmdline-tools/latest
+        yes | $HOME/Android/Sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/Android/Sdk --licenses
+        $HOME/Android/Sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/Android/Sdk "platforms;android-30" "build-tools;30.0.3"
+
     - name: Create local.properties
       run: echo "sdk.dir=$HOME/Android/Sdk" > local.properties
-      
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4
 
     - name: Cache Gradle
       id: cache-gradle
@@ -47,7 +72,7 @@ jobs:
         key: gradle-${{ hashFiles('**/build.gradle', '**/settings.gradle') }}
         restore-keys: |
           gradle-
-          
+
     - name: Compile and run tests on robot code
       run: ./gradlew build
 
