--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ android.useAndroidX=true
 android.enableJetifier=false
 
 # Allow Gradle to use up to 4 GB of RAM
-org.gradle.jvmargs=-Xmx4g
+org.gradle.jvmargs=-Xmx8000M
 
 # Performance upgrade
 org.gradle.caching=true
