--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,15 @@ jobs:
     - name: Ensure Android SDK directory exists
       run: mkdir -p $HOME/Android/Sdk
 
+    - name: SDK Cache
+      id: sdk-cache
+      uses: actions/cache@v2
+      with:
+        path: /usr/local/lib/android/sdk
+        key: sdk-cache-${{ hashFiles('**/*.gradle*', '**/gradlew*', '**/local.properties') }}
+        
     - name: Install Android SDK
+      if: steps.sdk-cache.outputs.cache-hit != 'true'
       run: |
         sudo apt-get update
         sudo apt-get install -y wget unzip
