--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@ org.gradle.jvmargs=-Xmx8000M
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 org.gradle.parallel=true
+org.gradle.vfs.watch=true
+org.gradle.configureondemand=true
