--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
       uses: gradle/actions/setup-gradle@v3
       
     - name: Compile and run tests on robot code
-      run: ./gradlew build --scan
+      run: ./gradlew build 
 
     - name: Upload build reports
       uses: actions/upload-artifact@v4
